# set_5

./: .gitignore  CMakeLists.txt  README
src/analysis/: analyze.py  theory_check.py
src/experiments/: choose_B.hpp  exact.hpp  run_experiments.cpp  smoke.cpp
src/hash/: HashFuncGen.cpp  HashFuncGen.hpp
src/hll/: HyperLogLog.cpp  HyperLogLog.hpp
src/stream/: RandomStreamGen.cpp  RandomStreamGen.hpp
